Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140558

Pulseaudio leaks

XMLWordPrintable

    • Linux/X11
    • Multimedia Current w28 ...

      Using QSoundEffect to play sounds repeatedly triggers leaks reported by LeakSanitizer. The leaks come from pa_operation_new in QPulseAudioSinkStream::stop(), called via QSoundEffectPrivate::setPlaying().
      Attached example can be used to see the leak, Run the example which will play a sound in a loop. At exit, LeakSanitizer reports leaked.

        For Gerrit Dashboard: QTBUG-140558
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:

                There is 1 open Gerrit change