pulseaudio: fix memory leak of operation objects

We apparently cannot wait for the operations to finish, as that used to
create deadlocks. However we should not leak the operation objects.

Fixes: QTBUG-140558
Pick-to: 6.8 6.9 6.10 6.10.0
Change-Id: Iec1000ca60ed8844470d121e43e59fc3ec23ee85
Reviewed-by: Mikko Hallamaa <mikko.hallamaa@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>